[package]
name = "rs-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# rbatis
rbatis = "4"
rbs = "0.1"
rbdc-mysql = "0.1"
fast_log = "1.5"

serde = { version = "1", features = ["derive"] }
once_cell = "1"

md5 = "0.7"
jwt-simple = "0.10"